# xcu_my_apps

./: .env.example  .gitattributes  .gitignore  AUTH_FIX_SUMMARY.md  CODEXES_SSO_FIX.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FINAL_STATUS.md  DEV_WORKFLOW.md  ENV_MANAGEMENT.md  FINAL_SSO_STATUS.md  GCP_LOAD_BALANCER_CONFIGURATION.md  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  PORT_ASSIGNMENTS.md  PROJECT_SUMMARY.md  README.md  REMOTE_STRUCTURE.md  SIDEBAR_INTEGRATION_COMPLETE.md  SSO_COOKIE_ASSESSMENT.md  SSO_COOKIE_IMPLEMENTATION_COMPLETE.md  SSO_MIGRATION_COMPLETE.md  SUBMARINE_PATROL_LOGS_PUBLICATION_STRATEGY.md  TANG_COMPLETE_FINAL_REPORT.md  TANG_FULL_PIPELINE_SUMMARY.md  TANG_OCR_TEST_COST_REPORT.md  TESTING_SSO.md  UNIFIED_SIDEBAR_SUMMARY.md  VISION_VS_TEXT_MODELS_ANALYSIS.md  analyze_pdfs.py  cia_pdf_finder.py  claude_gov_pdf_finder.py  deploy_services.sh  deploy_to_remote.sh  fix_all_sidebars.py  generate_annotations_vision.py  gov_pdf_downloader.py  migrate_to_remote.sh  ocr_patrol_reports_gemini.py  optimize_patrol_pdfs.py  prepare_tang_for_pipeline.py  (+6 more)
all_applications_runner/: .env.backup.20251003_034518  ADMIN_CREDENTIALS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  NEXT_STEPS.md  QUICK_START_TESTING.md  README.md  REDESIGN_PROPOSAL.md  REDESIGN_V2_REVENUE_FOCUSED.md  RETURN_BUTTON_STATUS.md  STRIPE_TESTING_GUIDE.md  SYSTEM_STATE_REQUIREMENTS.md  all_applications_runner_deployment.md  apps_config.json  apps_config.json.backup.20251003_034918  apps_config_dev.json  apps_config_production.json  auth_integration.py  auth_integration.py.backup  install.sh  main.py  main.py.backup  main.py.backup_20251009_024714  main_redesigned.py  main_v2_revenue.py  old_xai  process_manager.py  pyproject.toml  requirements.txt  subscription_manager.py  system_state_verifier.py  test_codexes_config.py  test_stripe_checkout.py  uninstall.sh
all_applications_runner/deployment/: DEPLOYMENT_GUIDE.md  all-apps-runner.service  all-apps-vhosts.conf  apache_config.py  deploy.sh  macos_launchctl.py  xtuff-ai-runner.conf
all_applications_runner/resources/: sidebar_widget.py
all_applications_runner/service_files/: agentic_social_server.service  app-nimble_books-codexes_factory.service  app-nimble_books-imprint_builder.service  app-nimble_books-manuscript_manager.service  app-personal-resume.service  app-runner-manager.service  app-runner-master.service  app-xtuff_ai-agentic_social_server.service  app-xtuff_ai-altdoge.service  app-xtuff_ai-collectiverse.service  app-xtuff_ai-trillionsofpeople.service  bpg.service  codexes-factory.service  deploy.service  nimble-website-streamlit-app.service  nimble-website-streamlit-app.service.save  trillions.service  xai_health_coach.service  xai_health_coach.service.save
nimble/arxiv-writer/: .bandit  .pre-commit-config.yaml  .semgrepignore  CHANGELOG.md  CLI_COMMANDS_SUMMARY.md  CODEXES_FACTORY_CLI_GUIDE.md  CODEXES_FACTORY_SUPPORT.md  DISTRIBUTION.md  FULL_CONTEXT_SETUP.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  VALIDATION_REPORT.md  full_context.json  main.py  pyproject.toml  pyproject_reference.toml  requirements_reference.txt  setup_api_keys.sh
nimble/codexes-factory/: --publisher-prompts  .env.example  .gitignore  AGENTIC_MARKETING_SUBSTACK.md  ARXIV_WRITER_MIGRATION.md  B5K_IMPORT_REPORT.md  BATCH_IMPRINT_OPERATIONS_PLAN.md  BATCH_OPERATIONS_IMPLEMENTATION_REPORT.md  CLAUDE.md  FINANCE_REFACTORING_SUMMARY.md  IMPRINT_PAPER_GENERATION_FEATURE.md  INTEGRATION_VALIDATION_CHECKLIST.md  LSI_2025-09-23.csv  NIMBLE_ULTRA_PIPELINE_ISSUES.md  OVERWRITE_FLAG_IMPLEMENTATION_SUMMARY.md  READER_PANELS_GUIDE.md  SNARK_PARENT_EVALUATION_REPORT.md  TESTING_GUIDE.md  TESTING_INSTRUCTIONS.md  TEST_IGNORE.txt  USER_GUIDE.md  XYNAPSE_QUEUE_AGENT_README.md  XYNAPSE_TRACES_AGENT.md  XYNAPSE_TRACES_LAUNCH_PLAN_OCT13-31.md  all_specs.json  analyze_children_feedback.py  analyze_maya_panel_results.py  analyze_purchasing_feedback.py  analyze_snark_evaluations.py  apply_volume_reorganization.py  arxiv_paper_bisac_taxonomy.tex  batch_transform_cli.py  build_final_volumes_from_mapping.py  catalog.csv  check_panel_progress.py  check_pdf_text_and_ocr.py  clear_cache_and_rebuild.sh  collate_maya_feedback.py  complete_missing_ideas.py  comprehensive_validation_results_20250826_231917.json  (+109 more)
xtuff/ai-powered-resume-builder/: .env.example  AUTH_INTEGRATION_REPORT.md  INTEGRATION_SUMMARY.md  QUICK_START.md  README.md  TESTING_GUIDE.md  TEST_ACCOUNTS.md  ai-powered-resume-builder-standalone-backup.py  app.py  pyproject.toml  requirements.txt  test_auth_integration.py
xtuff/personal-time-management/: .gitignore  HABIT_RESEARCH_BIBLIOGRAPHY.md  HABIT_UI_ANALYSIS_AND_REDESIGN.md  HABIT_UI_REDESIGN_SUMMARY.md  README.md  README_API.md  TASK_8_COMPLETION_SUMMARY.md  app_management_api.py  behavior_counter_manager.py  comprehensive_dashboard.py  daily_engine.py  daily_engine_integration.py  daily_engine_spec.md  database_extensions.py  database_extensions.py.orig  database_extensions.py.rej  enhanced_habit_tracker_ui.py  enhanced_promotion_system.py  habit_metrics_manager.py  habit_visualization_engine.py  integration_test.py  launchctl_manager.py  logging_monitoring_system.py  main.py  multi_app_support.py  mytemplate.tex  process_monitor.py  pyproject.toml  requirements.txt  requirements_agents.txt  run_daily_engine.sh  streamlit_app_manager.py  streamlit_cli.py  system_validation.py  utilities_daily_engine.py
xtuff/trillionsofpeople/: 100.json  200.json  300.json  Abraham_Lincoln.json  Albert_Einstein.json  Aldous_Huxley.json  Alexander_the_Great.json  Alfred_Hitchcock.json  Alfred_Nobel.json  Andre_Agassi.json  Andrei_Tarkovsky.json  Aristotle.json  Arthur_Schopenhauer.json  Ayn_Rand.json  CHANGELOG.md  CLAUDE.md  DEPENDENCY_CLEANUP.md  DEPENDENCY_SUMMARY.md  LICENSE  Longform.py  Scenarios.py  card2dropkit.py  card2jpg.py  gensim_process_wiki.py  gpt3_reduced_fx.py  main.py  pyproject.toml  requirements-legacy.txt  requirements.txt  trillionsofpeople.info.json  trillionsofpeople.info.txt  trillionsofpeople.py  utilities.py  validate_dependencies.py  wikiload.py  (+1 more)
(+3865 files in other folders)
