[project]
name = "unified-app-runner"
version = "1.0.0"
description = "Unified Streamlit application runner with process management and authentication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "streamlit-authenticator>=0.2.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
