[project]
name = "codexes-factory"
version = "0.2.0"
description = "AI-Assisted Publishing Lifecycle Platform"
requires-python = ">=3.12"
dependencies = [
    # App-specific dependencies (common deps inherited from workspace root)
    "isbnlib",
    "streamlit-authenticator>=0.4.2",
    "python-barcode>=0.15.1",
    "jsonschema>=4.24.0",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "json-repair>=0.51.0",
    "litellm>=1.72.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
