[project]
name = "ai-powered-resume-builder"
version = "0.1.0"
description = "AI-powered resume and team profile builder with collaboration features"
requires-python = ">=3.12"
dependencies = [
    # All dependencies inherited from workspace root
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]
